--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@popperjs/core": "^2.11.8",
     "@primevue/themes": "^4.2.5",
+    "@tailwindcss/vite": "^4.1.11",
     "bootstrap": "^5.3.3",
     "bootstrap-vue": "^2.23.1",
     "express": "^4.21.1",
@@ -23,6 +24,7 @@
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
     "vue": "^3.5.13",
+    "vue-final-modal": "^4.5.5",
     "vue-router": "^4.3.3",
     "vue-select": "^3.20.3"
   },
@@ -34,6 +36,7 @@
     "eslint": "^8.57.0",
     "eslint-plugin-vue": "^9.23.0",
     "prettier": "^3.2.5",
+    "tailwindcss": "^3.4.17",
     "vite": "^5.3.1",
     "vite-plugin-vue-devtools": "^7.3.1"
   },
